# nokemon

./: .gitignore  Cargo.toml  LICENSE  README.md  cbindgen.toml  game_core.h  save_game.json  thumbnails.html  world.json
aseprite/: animated_objects.aseprite  avatars.aseprite  bg_tile_desert.aseprite  bg_tile_desert_border_nesw.aseprite  bg_tile_desert_border_nw.aseprite  bg_tile_desert_border_nws.aseprite  bg_tile_desert_border_w.aseprite  bg_tile_grass.aseprite  bg_tile_grass_border_nesw.aseprite  bg_tile_grass_border_nw.aseprite  bg_tile_grass_border_nws.aseprite  bg_tile_grass_border_w.aseprite  bg_tile_rock.aseprite  bg_tile_rock_border_nesw.aseprite  bg_tile_rock_border_nw.aseprite  bg_tile_rock_border_nws.aseprite  bg_tile_rock_border_w.aseprite  bg_tile_snow.aseprite  bg_tile_snow_border_nesw.aseprite  bg_tile_snow_border_nw.aseprite  bg_tile_snow_border_nws.aseprite  bg_tile_snow_border_w.aseprite  bg_tile_water.aseprite  bg_tile_water_border_nesw.aseprite  bg_tile_water_border_nw.aseprite  bg_tile_water_border_nws.aseprite  bg_tile_water_border_w.aseprite  bg_tiles.aseprite  buildings.aseprite  combat.aseprite  cybertruck.aseprite  directionals.aseprite  farm_plants.aseprite  house.aseprite  household_objects.aseprite  humanoids.aseprite  humanoids_1x1.aseprite  humanoids_1x2.aseprite  humanoids_2x2.aseprite  humanoids_2x3.aseprite  (+22 more)
data/: 0.json  1000.json  1001.json  1002.json  1003.json  1004.json  1005.json  1006.json  1007.json  1008.json  1009.json  1727270776.json  1727270777.json  1727270791.json  1727270801.json  1727478113.json  1727478114.json  (+10 more)
(+496 files in other folders)
