[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
common_macros = "0.1.1"
lazy_static = "1.5.0"
rand = "0.8.5"
raylib = "5.0.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.127"

[lib]
name = "game_core"
crate-type = ["staticlib", "cdylib"]

[[bin]]
name = "game"
path = "src/main.rs"

[package.metadata.cargo-lipo]
